--- a/course.html
+++ b/course.html
@@ -86,6 +86,16 @@
   </div>
 
   <div class="card">
+<div style="text-align:center; margin-bottom:20px;">
+  <img src="manjunath.jpg" 
+       style="width:120px; height:120px; border-radius:50%; 
+       border:3px solid #FFD700; object-fit:cover; 
+       box-shadow:0 0 20px rgba(255,215,0,0.4);">
+
+  <p style="margin-top:10px; font-size:14px; opacity:0.8;">
+    Designed & Mentored by <b style="color:#FFD700;">Manjunath Sir</b>
+  </p>
+</div>
 
     <h1>SSLC 2026 CRASH COURSE</h1>
 
@@ -112,6 +122,9 @@
     <div class="goal-box">
       💥 30 Days. 300 Hours. One Goal – SSLC 90+
     </div>
+<p style="font-style:italic; margin-top:5px;">
+"The harder you work for something, the greater you'll feel when you achieve it."
+</p>
 
     <div style="margin-top:20px; text-align:center;">
       
