--- a/courses.html
+++ b/courses.html
@@ -87,16 +87,22 @@
 
   <div class="card">
 <div style="text-align:center; margin-bottom:20px;">
-  <img src="https://via.placeholder.com/120">
 
-       style="width:120px; height:120px; border-radius:50%; 
-       border:3px solid #FFD700; object-fit:cover; 
-       box-shadow:0 0 20px rgba(255,215,0,0.4);">
+  <img src="manjunath.JPG"
+       alt="Manjunath Sir"
+       style="width:120px; height:120px; border-radius:50%;
+       border:3px solid #FFD700; object-fit:cover;
+       box-shadow:0 0 20px rgba(255,215,0,0.4);" />
 
   <p style="margin-top:10px; font-size:14px; opacity:0.8;">
-    Designed & Mentored by <b style="color:#FFD700;">Manjunath Sir</b>
+    Designed & Mentored by 
+    <b style="color:#FFD700;">Manjunath Sir</b>
   </p>
+
 </div>
+
+
+
 
     <h1>SSLC 2026 CRASH COURSE</h1>
 
