--- a/courses.html
+++ b/courses.html
@@ -89,7 +89,7 @@
 <div style="text-align:center; margin-bottom:20px;">
 
   <<div style="margin-bottom:20px;">
-  <img src="manjunath.JPG"
+  <img src="Manjunath.JPG"
        alt="Manjunath Sir"
        style="width:100%;
        border-radius:20px;
