--- a/index.html
+++ b/index.html
@@ -105,11 +105,34 @@
 
   function checkInputs() {
     if (nameInput.value && phoneInput.value && mediumSelect.value) {
-      googleBtn.style.display = "block";
-    } else {
-      googleBtn.style.display = "none";
-    }
-  }
+      googleBtn.addEventListener("click", () => {
+
+  auth.signInWithPopup(provider)
+  .then((result) => {
+
+    const user = result.user;
+
+    db.collection("students").doc(user.uid).set({
+      name: nameInput.value,
+      phone: phoneInput.value,
+      email: user.email,
+      medium: mediumSelect.value,
+      enrolledCourse: "",
+      paymentStatus: "pending",
+      totalStudyHours: 0,
+      joinedOn: firebase.firestore.FieldValue.serverTimestamp()
+    })
+    .then(() => {
+      window.location.href = "courses.html";
+    });
+
+  })
+  .catch((error) => {
+    alert("Login Failed: " + error.message);
+  });
+
+});
+
 
   nameInput.addEventListener("input", checkInputs);
   phoneInput.addEventListener("input", checkInputs);
