--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>HiS Academy Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Firebase (Compat Version Only) -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #0f0f1a, #1a1a2e);
+      font-family: Poppins, sans-serif;
+      background: linear-gradient(135deg,#0f0f1a,#1a1a2e);
       color: white;
       display: flex;
       justify-content: center;
@@ -22,13 +27,13 @@
       background: #111827;
       padding: 30px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(255, 215, 0, 0.2);
+      box-shadow: 0 0 30px rgba(255, 204, 0, 0.2);
     }
 
     h2 {
       text-align: center;
       color: #FFD700;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
 
     input, select {
@@ -39,6 +44,7 @@
       border: none;
       background: #1f2937;
       color: white;
+      outline: none;
     }
 
     button {
@@ -56,34 +62,29 @@
     button:hover {
       background: #ffcc00;
     }
+
   </style>
 </head>
-
 <body>
 
 <div class="container">
   <h2>Welcome to HiS Academy</h2>
 
-  <input type="text" id="name" placeholder="Enter Name">
+  <input type="text" id="name" placeholder="Enter Your Name">
   <input type="tel" id="phone" placeholder="Enter Phone Number">
 
   <select id="medium">
     <option value="">Select Medium</option>
-    <option>English</option>
-    <option>Kannada</option>
+    <option value="English">English</option>
+    <option value="Kannada">Kannada</option>
   </select>
 
   <button id="googleBtn">Login with Google</button>
 </div>
 
-<!-- Firebase v9 Modular SDK -->
-<script type="module">
+<script>
 
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getAuth, GoogleAuthProvider, signInWithPopup } 
-  from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
+  // 🔥 Firebase Config
   const firebaseConfig = {
     apiKey: "AIzaSyCehyZQukDfslKTY_u9yXcUrzGtMNHvuPA",
     authDomain: "his-academy.firebaseapp.com",
@@ -94,66 +95,59 @@
     measurementId: "G-8WPMS7H33F"
   };
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const provider = new GoogleAuthProvider();
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+  const provider = new firebase.auth.GoogleAuthProvider();
 
   const nameInput = document.getElementById("name");
   const phoneInput = document.getElementById("phone");
   const mediumSelect = document.getElementById("medium");
   const googleBtn = document.getElementById("googleBtn");
 
+  // Show Google button only if all fields filled
   function checkInputs() {
     if (nameInput.value && phoneInput.value && mediumSelect.value) {
-      googleBtn.addEventListener("click", () => {
-
-  auth.signInWithPopup(provider)
-  .then((result) => {
-
-    const user = result.user;
-
-    db.collection("students").doc(user.uid).set({
-      name: nameInput.value,
-      phone: phoneInput.value,
-      email: user.email,
-      medium: mediumSelect.value,
-      enrolledCourse: "",
-      paymentStatus: "pending",
-      totalStudyHours: 0,
-      joinedOn: firebase.firestore.FieldValue.serverTimestamp()
-    })
-    .then(() => {
-      window.location.href = "courses.html";
-    });
-
-  })
-  .catch((error) => {
-    alert("Login Failed: " + error.message);
-  });
-
-});
-
+      googleBtn.style.display = "block";
+    } else {
+      googleBtn.style.display = "none";
+    }
+  }
 
   nameInput.addEventListener("input", checkInputs);
   phoneInput.addEventListener("input", checkInputs);
   mediumSelect.addEventListener("change", checkInputs);
 
-  googleBtn.addEventListener("click", async () => {
-    try {
-      const result = await signInWithPopup(auth, provider);
+  // Google Login
+  googleBtn.addEventListener("click", () => {
+
+    auth.signInWithPopup(provider)
+    .then((result) => {
+
       const user = result.user;
 
-      localStorage.setItem("studentName", nameInput.value);
-      localStorage.setItem("studentPhone", phoneInput.value);
-      localStorage.setItem("studentMedium", mediumSelect.value);
-      localStorage.setItem("studentEmail", user.email);
+      // Save student to Firestore
+      db.collection("students").doc(user.uid).set({
+        name: nameInput.value,
+        phone: phoneInput.value,
+        email: user.email,
+        medium: mediumSelect.value,
+        enrolledCourse: "",
+        paymentStatus: "pending",
+        totalStudyHours: 0,
+        joinedOn: firebase.firestore.FieldValue.serverTimestamp()
+      })
+      .then(() => {
+        window.location.href = "courses.html";
+      });
 
-      window.location.href = "courses.html";
-
-    } catch (error) {
+    })
+    .catch((error) => {
       alert("Login Failed: " + error.message);
-      console.error(error);
-    }
+    });
+
   });
 
 </script>
