--- a/dashboard.html
+++ b/dashboard.html
@@ -211,10 +211,10 @@ console.log("Logged in UID:", user.uid);
 console.log("Firestore Data:", data);
 console.log("Payment Status:", data.paymentStatus);
 
-      //  if (data.paymentStatus !== "paid") {
-      //    alert("Please complete enrollment first.");
-      //    window.location.href = "courses.html";
-    //    }
+        if (data.paymentStatus !== "paid") {
+          alert("Please complete enrollment first.");
+          window.location.href = "courses.html";
+        }
 
         document.getElementById("studentName").innerText = data.name;
         document.getElementById("totalHours").innerText = data.totalStudyHours;
