--- a/dashboard.html
+++ b/dashboard.html
@@ -136,6 +136,45 @@
   font-style:italic;
   font-size:14px;
 }
+.carousel {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.6s ease-in-out;
+}
+
+.carousel-item {
+  min-width: 80%;
+  margin: 0 10%;
+  background: #1f2937;
+  border-radius: 15px;
+  padding: 15px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(255,215,0,0.15);
+  transform: scale(0.9);
+  transition: 0.4s;
+}
+
+.carousel-item.active {
+  transform: scale(1);
+  box-shadow: 0 0 30px rgba(255,215,0,0.4);
+}
+
+.carousel-item img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.carousel-item p {
+  font-style: italic;
+  font-size: 14px;
+}
 
   </style>
 </head>
