--- a/dashboard.html
+++ b/dashboard.html
@@ -415,6 +415,48 @@ setInterval(() => {
     });
   }
 }, 4000);
+// Netflix Style Infinite Carousel
+const track = document.querySelector('.carousel-track');
+let slides = Array.from(document.querySelectorAll('.carousel-item'));
+
+let currentIndex = 0;
+
+if(track){
+
+  const firstClone = slides[0].cloneNode(true);
+  const lastClone = slides[slides.length - 1].cloneNode(true);
+
+  track.appendChild(firstClone);
+  track.insertBefore(lastClone, slides[0]);
+
+  slides = Array.from(document.querySelectorAll('.carousel-item'));
+
+  track.style.transform = `translateX(-100%)`;
+  currentIndex = 1;
+
+  function updateSlidePosition() {
+    track.style.transform = `translateX(-${currentIndex * 100}%)`;
+    slides.forEach(slide => slide.classList.remove("active"));
+    slides[currentIndex].classList.add("active");
+  }
+
+  updateSlidePosition();
+
+  setInterval(() => {
+    currentIndex++;
+    track.style.transition = "transform 0.6s ease-in-out";
+    updateSlidePosition();
+
+    if (currentIndex === slides.length - 1) {
+      setTimeout(() => {
+        track.style.transition = "none";
+        currentIndex = 1;
+        updateSlidePosition();
+      }, 600);
+    }
+  }, 3500);
+
+}
 
 </script>
 
