--- a/recorded.html
+++ b/recorded.html
@@ -4,6 +4,11 @@
   <title>Recorded Classes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
   <style>
     body{
       margin:0;
@@ -13,10 +18,6 @@
       padding:20px;
     }
 
-    h2{
-      margin-bottom:20px;
-    }
-
     .video-card{
       background:#111827;
       padding:15px;
@@ -24,23 +25,6 @@
       margin-bottom:15px;
       box-shadow:0 0 20px rgba(255,215,0,0.1);
       cursor:pointer;
-      transition:0.3s;
-    }
-
-    .video-card:hover{
-      box-shadow:0 0 25px rgba(255,215,0,0.3);
-    }
-
-    .thumbnail{
-      width:100%;
-      height:160px;
-      background:#1f2937;
-      border-radius:10px;
-      margin-bottom:10px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:40px;
     }
 
     .title{
@@ -68,39 +52,58 @@
 
 <h2>📚 SSLC 2026 Recorded Classes</h2>
 
-<!-- Video 1 -->
-<div class="video-card" onclick="openVideo('video1.mp4','Algebra Basics - Introduction')">
-  <div class="thumbnail">▶</div>
-  <div class="title">Algebra Basics - Introduction</div>
-  <div class="duration">Duration: 1hr 20min</div>
+<div class="video-card" onclick="openVideo('video1.mp4','Algebra Basics')">
+  <div class="title">Algebra Basics</div>
+  <div class="duration">1hr 20min</div>
 </div>
 
-<!-- Video 2 -->
 <div class="video-card" onclick="openVideo('video2.mp4','Trigonometry Strategy')">
-  <div class="thumbnail">▶</div>
   <div class="title">Trigonometry Strategy</div>
-  <div class="duration">Duration: 1hr 10min</div>
+  <div class="duration">1hr 10min</div>
 </div>
 
-<!-- Video 3 -->
-<div class="video-card" onclick="openVideo('video3.mp4','Science Important Questions')">
-  <div class="thumbnail">▶</div>
-  <div class="title">Science Important Questions</div>
-  <div class="duration">Duration: 55min</div>
-</div>
-
-<button onclick="goBack()">⬅ Back to Dashboard</button>
+<button onclick="goBack()">⬅ Back</button>
 
 <script>
-  function openVideo(videoFile, title){
+
+  // Firebase Config
+  const firebaseConfig = {
+    apiKey: "AIzaSyCehyZQukDfslKTY_u9yXcUrzGtMNHvuPA",
+    authDomain: "his-academy.firebaseapp.com",
+    projectId: "his-academy",
+    storageBucket: "his-academy.firebasestorage.app",
+    messagingSenderId: "573278549264",
+    appId: "1:573278549264:web:ca2ff160b5a100cc7d2195"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  // 🔒 PROTECTION
+  auth.onAuthStateChanged((user) => {
+    if (user) {
+      db.collection("students").doc(user.uid).get()
+      .then(doc => {
+        if (!doc.exists || doc.data().paymentStatus !== "paid") {
+          window.location.href = "courses.html";
+        }
+      });
+    } else {
+      window.location.href = "login.html";
+    }
+  });
+
+  function openVideo(videoFile,title){
     window.location.href = "watch.html?video=" + videoFile + "&title=" + encodeURIComponent(title);
   }
 
   function goBack(){
-    window.location.href = "dashboard.html";
+    window.location.href="dashboard.html";
   }
+
 </script>
 
 </body>
 </html>
-
