--- a/live.html
+++ b/live.html
@@ -4,6 +4,11 @@
   <title>Live Class</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
   <style>
     body{
       margin:0;
@@ -26,16 +31,11 @@
       color:#FFD700;
     }
 
-    video, iframe{
+    video{
       width:100%;
       border-radius:15px;
       margin-top:15px;
       box-shadow:0 0 30px rgba(255,0,0,0.3);
-    }
-
-    .info{
-      margin-top:15px;
-      opacity:0.8;
     }
 
     button{
@@ -52,31 +52,47 @@
 <body>
 
 <div class="live-badge">🔴 LIVE NOW</div>
+<h2>SSLC 2026 – Live Strategy Session</h2>
 
-<h2>SSLC 2026 – Maths Strategy Session</h2>
-
-<!-- OPTION 1: Local Live Video -->
 <video controls autoplay>
   <source src="live.mp4" type="video/mp4">
 </video>
 
-<!-- OPTION 2: YouTube Live (Replace with your link)
-<iframe src="https://www.youtube.com/embed/YOUR_LIVE_STREAM_ID" 
-allowfullscreen></iframe>
--->
-
-<div class="info">
-  Mentor: Manjunath Sir <br>
-  Topic: Important Exam Strategy <br>
-  Duration: 1hr 30min
-</div>
-
-<button onclick="goBack()">⬅ Back to Dashboard</button>
+<button onclick="goBack()">⬅ Back</button>
 
 <script>
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCehyZQukDfslKTY_u9yXcUrzGtMNHvuPA",
+    authDomain: "his-academy.firebaseapp.com",
+    projectId: "his-academy",
+    storageBucket: "his-academy.firebasestorage.app",
+    messagingSenderId: "573278549264",
+    appId: "1:573278549264:web:ca2ff160b5a100cc7d2195"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  auth.onAuthStateChanged((user) => {
+    if (user) {
+      db.collection("students").doc(user.uid).get()
+      .then(doc => {
+        if (!doc.exists || doc.data().paymentStatus !== "paid") {
+          window.location.href = "courses.html";
+        }
+      });
+    } else {
+      window.location.href = "login.html";
+    }
+  });
+
   function goBack(){
     window.location.href="dashboard.html";
   }
+
 </script>
 
 </body>
