--- a/dashboard.html
+++ b/dashboard.html
@@ -80,15 +80,13 @@
       gap:15px;
     }
 
-    .batch{
-      min-width:220px;
-      background:#1f2937;
-      padding:15px;
-      border-radius:15px;
-      text-align:center;
-      cursor:pointer;
-      position:relative;
-    }
+    .batch img{
+  width:100%;
+  height:180px;      /* makes all images same height */
+  object-fit:cover;  /* prevents stretching */
+  border-radius:12px;
+}
+
 
     .locked::after{
       content:"🔒 Locked";
