--- a/dashboard.html
+++ b/dashboard.html
@@ -74,17 +74,21 @@
     }
 
     /* Batches */
-    .batch-container{
-      display:flex;
-      overflow-x:auto;
-      gap:15px;
-    }
+    .batch{
+  min-width:220px;
+  background:#1f2937;
+  padding:15px;
+  border-radius:15px;
+  position:relative;
+}
 
-    .batch img{
+.batch img{
   width:100%;
-  height:180px;      /* makes all images same height */
-  object-fit:cover;  /* prevents stretching */
+  height:180px;
+  object-fit:cover;
   border-radius:12px;
+
+
 }
 
 
