--- a/dashboard.html
+++ b/dashboard.html
@@ -205,6 +205,9 @@
   <h3>Batches</h3>
 
   <div class="batch-wrapper">
+   <div class="batch-card">...</div>
+</div>
+
 
     <!-- Unlocked -->
     <div class="batch-card" onclick="openRecorded()">
