--- a/recorded.html
+++ b/recorded.html
@@ -103,19 +103,19 @@
   const videos = [
     {
       title: "Lesson 1 – Algebra Basics",
-      file: "videos/video1.mp4"
+      file: "video1.mp4"
     },
     {
       title: "Lesson 2 – Trigonometry Strategy",
-      file: "videos/video2.mp4"
+      file: "video2.mp4"
     },
     {
       title: "Lesson 3 – Science Important Questions",
-      file: "videos/video3.mp4"
+      file: "video3.mp4"
     },
     {
       title: "Lesson 4 – English Writing Tips",
-      file: "videos/video4.mp4"
+      file: "video4.mp4"
     }
   ];
 
