--- a/recorded.html
+++ b/recorded.html
@@ -103,8 +103,8 @@
   // 🎥 Video List (UPLOAD MORE HERE)
   const videos = [
     {
-      title: "Lesson 1 – Algebra Basics",
-      file: "videos/video1.mp4"
+      title: "Lesson 1 – Social Stratification",
+      file: "video1.mp4"
     },
     {
       title: "Lesson 2 – Trigonometry Strategy",
