--- a/live.html
+++ b/live.html
@@ -43,27 +43,38 @@
       position:relative;
     }
 
+    video{
+      width:100%;
+      border-radius:12px;
+    }
+
     iframe{
       width:100%;
-      height:400px;
+      height:500px;
       border-radius:12px;
     }
 
     .watermark{
       position:absolute;
-      top:30px;
-      left:30px;
-      color:rgba(255,255,255,0.2);
+      top:40px;
+      left:40px;
+      color:rgba(255,255,255,0.15);
       font-size:18px;
       font-weight:bold;
       pointer-events:none;
-      animation:moveWatermark 8s infinite alternate;
+      animation:moveWatermark 10s infinite alternate;
       z-index:999;
     }
 
     @keyframes moveWatermark{
-      0% { transform: translate(0,0); }
-      100% { transform: translate(200px,150px); }
+      0%{ transform: translate(0,0); }
+      100%{ transform: translate(250px,200px); }
+    }
+
+    .section-title{
+      color:#FFD700;
+      font-weight:bold;
+      margin-bottom:10px;
     }
 
     .btn{
@@ -92,16 +103,20 @@
     Loading...
   </div>
 
+  <!-- Live Video -->
   <div class="card">
+    <div class="section-title">Live Session</div>
 
-    <!-- Replace Vimeo link here -->
-    <iframe 
-      src="https://player.vimeo.com/video/000000000?controls=1&title=0&byline=0&portrait=0"
-      frameborder="0"
-      allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen>
-    </iframe>
+    <video controls controlsList="nodownload">
+      <source src="videos/live.mp4" type="video/mp4">
+    </video>
+  </div>
 
+  <!-- PDF Notes -->
+  <div class="card">
+    <div class="section-title">Class Notes</div>
+
+    <iframe src="notes/chapter1.pdf"></iframe>
   </div>
 
   <button class="btn" onclick="goBack()">
@@ -125,7 +140,6 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  // Protect Page + Add Watermark
   auth.onAuthStateChanged((user)=>{
     if(user){
       db.collection("students").doc(user.uid).get()
