--- a/dashboard.html
+++ b/dashboard.html
@@ -68,10 +68,13 @@
     }
 
     .slide img{
-      width:100%;
-      border-radius:10px;
-      margin-bottom:10px;
-    }
+    width:100%;
+    height:auto;
+    object-fit: contain;
+    border-radius:10px;
+    margin-bottom:10px;
+}
+
 
     /* Batches */
     .batch-container{
