--- a/dashboard.html
+++ b/dashboard.html
@@ -321,23 +321,29 @@
   function callNow(){
     window.location.href="tel:02269719375";
   }
-// 🔥 Auto Scroll Motivation Slider
+// 🔥 Proper Auto Slide (No Half Cut)
 const slider = document.querySelector('.slider');
+const slides = document.querySelectorAll('.slide');
 
-let scrollAmount = 0;
+let currentIndex = 0;
 
 setInterval(() => {
-  if(slider){
-    scrollAmount += 270;  // distance per slide
-    if(scrollAmount >= slider.scrollWidth){
-      scrollAmount = 0;
+  if(slider && slides.length > 0){
+
+    currentIndex++;
+
+    if(currentIndex >= slides.length){
+      currentIndex = 0;
     }
+
     slider.scrollTo({
-      left: scrollAmount,
+      left: slides[currentIndex].offsetLeft,
       behavior: "smooth"
     });
+
   }
-}, 4000); // moves every 4 seconds
+}, 4000);
+
 
 </script>
 
