--- a/recorded.html
+++ b/recorded.html
@@ -118,7 +118,7 @@
 
         if (!doc.exists || doc.data().paymentStatus !== "paid") {
           alert("Access Denied. Please enroll first.");
-          window.location.href = "courses.html";
+          window.location.href = "profile.html";
         }
 
       });
