--- a/notes.html
+++ b/notes.html
@@ -206,7 +206,7 @@
   }
 
   // Navigation
-  function goDashboard(){ window.location.href="dashboard.html"; }
+  function goDashboard(){ window.location.href="profile.html"; }
   function goLive(){ window.location.href="live.html"; }
   function goRecorded(){ window.location.href="recorded.html"; }
   function goProfile(){ window.location.href="profile.html"; }
